<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textViewTitre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Détails de la représentation" />

        <TextView
            android:id="@+id/textViewClient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:visibility="invisible"
            android:text="client" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewGroupe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewGroupe" />

        <TextView
            android:id="@+id/textViewAfficheGroupe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewAfficheGroupe" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewDate" />

        <TextView
            android:id="@+id/textViewAfficheDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewAfficheDate" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewHeureDeb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewHeureDeb" />

        <TextView
            android:id="@+id/textViewAfficheHeureDeb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewAfficheHeureDeb" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewHeureFin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewHeureFin" />

        <TextView
            android:id="@+id/textViewAfficheHeureFin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewAfficheHeureFin" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewLieu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewLieu" />

        <TextView
            android:id="@+id/textViewAfficheLieu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewAfficheLieu" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewNbPlacesTotales"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewNbPlacesTotales" />

        <TextView
            android:id="@+id/textViewAffichageNbPlacesTotales"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewAffichageNbPlacesTotales" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewNbPlacesDisponibles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewNbPlacesDisponibles" />

        <TextView
            android:id="@+id/textViewAffichageNbPlacesDisponibles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewAffichageNbPlacesDisponibles" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/placesVoulues"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="invisible"
        tools:ignore="InvalidId">
            <TextView
                android:id="@+id/textViewNbPlacesVoulues"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textViewNbPlacesVoulues" />

            <EditText
                android:id="@+id/editTextNbPlacesVoulues"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="4"
                android:inputType="number"/>
    </LinearLayout>
    <Button
        android:id="@+id/buttonAuthentification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/buttonAuthentification" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Revenir à la liste des représentations" />
</LinearLayout>